classDiagram
  %% ggc.app
  class App {
    -main(args: String[])$ void
  }

  %% ggc.app.lookups
  class DoLookupPaymentsByPartner {
    +execute() void
  }

  %% ggc.app.lookups
  class DoLookupProductBatchesUnderGivenPrice {
    +execute() void
  }
  
  %% ggc.app.lookups
  class LookupsMenu {

  }

  %% ..........!!!

  class DoAdvanceDate {

  }

  %% pt.tecnico.uilib.Dialog
  App ..> Dialog
  App ..> Menu
  %% gcc
  App ..> WarehouseManager

  %% pt.tecnico.uilib.menus.CommandException
  %% ggc.app.exceptions
  DuplicatePartnerKeyException --|> CommandException
  FileOpenFailedException --|> CommandException
  InvalidDateException --|> CommandException
  UnavailableProductException --|> CommandException
  UnknownPartnerKeyException --|> CommandException
  UnknownProductKeyException --|> CommandException
  UnknownServiceLevelException --|> CommandException
  UnknownServiceTypeException --|> CommandException
  UnknownTransactionKeyException --|> CommandException

  %% pt.tecnico.uilib.menus.Command
  %% pt.tecnico.uilib.menus.CommandException
  %% ggc.app.lookups
  DoLookupPaymentsByPartner --|> Command : Receiver = WarehouseManager
  DoLookupPaymentsByPartner ..> WarehouseManager
  DoLookupPaymentsByPartner ..> CommandException : throws
  DoLookupProductBatchesUnderGivenPrice --|> Command : Receiver = WarehouseManager 
  DoLookupProductBatchesUnderGivenPrice ..> WarehouseManager
  DoLookupProductBatchesUnderGivenPrice ..> CommandException : throws

  %% pt.tecnico.uilib.menus.Menu
  %% ggc.app.lookups
  Menu --|> UILIBMenu
